crates/aven-check/tests/fixtures/check/invalid/undefined-transparent-spread-mismatch.av
User = { name: Text, email: Text }
Patch = { name: ?Int, email: ?Text }
base : User = { name: "Grace", email: "grace@example.test" }
patch : Patch = { name: 1 }
value = { ..base, ..patch }
